# vulkan-triangle-rs

./: .travis.yml  Cargo.toml  README.md  compile_shaders.ps1  compile_shaders.sh  debug.ps1  vk_layer_settings.txt
.github/workflows/: build.yml
assets/shaders/: shader.frag.spv  shader.vert  shader.vert.spv
shaders/: shader.frag.spv
src/: lib.rs  main.rs
