[package]
name = "vk-triangle-rs"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

[dependencies]
log = "0.4"
simple_logger = "1.3.0"
raw-window-handle = "0.3"
ash = "0.29"

[dependencies.winit]
git = "https://github.com/adrien-ben/winit"
rev = "c3e524f7deaa5dbc9a5a59ef0dd37980134cea53"

[target.'cfg(target_os = "android")'.dependencies.android_glue]
git = "https://github.com/rust-windowing/android-rs-glue"

# Android metadata
[package.metadata.android]
label = "Vulkan Triangle Rust"
assets = "assets"

[package.metadata.android.application_attributes]
"android:hardwareAccelerated" = "true"

[[package.metadata.android.feature]]
name = "android.hardware.vulkan.level"
version = "1"
required = true
