[package]
name = "vk-triangle-rs"
version = "0.1.1"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
log = "0.4"
simple_logger = "1.11"
ash = "0.32"
ash-window = "0.6"
winit = "0.24"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.2"

# Android manifest
[package.metadata.android]
apk_label = "Triangle"
target_sdk_version = 29
fullscreen = false

[[package.metadata.android.feature]]
name = "android.hardware.vulkan.level"
version = "0"
